--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                     <h2>User name</h2>
                                 </div>
                             </div>
-                            <li><a href="#">home</a></li>
+                            <li class="active"><a href="#">home</a></li>
                             <li><a href="#">category</a></li>
                             <li><a href="#">blog</a></li>
                             <li><a href="#">contact</a></li>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="product-content">
                         <h5>new colors introduced</h5>
-                        <h2>headphones</h2>
+                        <h2>Apple</h2>
                         <div class="stars">
                             <span><i class="fas fa-star"></i></span>
                             <span><i class="fas fa-star"></i></span>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="product-content">
                         <h5>new colors introduced</h5>
-                        <h2>headphones</h2>
+                        <h2>samsung</h2>
                         <div class="stars">
                             <span><i class="fas fa-star"></i></span>
                             <span><i class="fas fa-star"></i></span>
@@ -215,7 +215,10 @@
                         <a href="#" class="add-cart-btn">add to cart</a>
                     </div>
                 </div>
-                <div class="latest-product">
+                <div class="latest-product best-seller">
+                    <div class="tag">
+                        <span>best seller</span>
+                    </div>
                     <div class="img">
                         <img src="./images/images/products/iPhone/iphone5.jpeg" alt="iphone">
                     </div>
@@ -232,7 +235,10 @@
                         <a href="#" class="add-cart-btn">add to cart</a>
                     </div>
                 </div>
-                <div class="latest-product">
+                <div class="latest-product best-seller">
+                    <div class="tag">
+                        <span>best seller</span>
+                    </div>
                     <div class="img">
                         <img src="./images/images/products/iPhone/iphone5.jpeg" alt="iphone">
                     </div>
@@ -249,7 +255,10 @@
                         <a href="#" class="add-cart-btn">add to cart</a>
                     </div>
                 </div>
-                <div class="latest-product">
+                <div class="latest-product best-seller">
+                    <div class="tag">
+                        <span>best seller</span>
+                    </div>
                     <div class="img">
                         <img src="./images/images/products/sumsung/samsung6.jpeg" alt="samsung">
                     </div>
@@ -372,6 +381,91 @@
         </div>
     </section>
 
+    <!-- ======onePlus Banner======= -->
+    <section class="banner">
+        <div class="container">
+            <div class="banner-wrapper">
+                <div class="img">
+                    <a href="#">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/Wireless/cnnjpp/July21/Nord2/Hero/Nord_2_Jul8th_1242x450.jpg"
+                            alt="banner-1">
+                    </a>
+                </div>
+                <div class="img">
+                    <a href="#">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/Wireless/WLA/June/Headsets/realmeBudsq2/GoLive/Approved/D25129837_WL_realme_Buds_Q2_Go-live_Mob_Hero_1242x450.jpg"
+                            alt="banner-2">
+                    </a>
+                </div>
+                <div class="img">
+                    <a href="#">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/Audio/Edict_NM/launch/Edict_1242x4501.jpg"
+                            alt="banner-3">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ========accessories section======== -->
+    <section class="accessories-section">
+        <div class="container">
+            <h2>shop accessories</h2>
+            <div class="accessories-wrapper">
+                <div class="accessories">
+                    <div class="img">
+                        <img src="https://images-na.ssl-images-amazon.com/images/G/31/img21/Wireless/WLA/June/MobilesPage/New/D25047019_WLA_BAU_shop-by-category_2._SY375_QL85_.jpg" alt="power bank">
+                    </div>
+                    <div class="access-content">
+                        <h4>power bank</h4>
+                    </div>
+                </div>
+                <div class="accessories">
+                    <div class="img">
+                        <img src="https://images-na.ssl-images-amazon.com/images/G/31/img21/Wireless/WLA/June/MobilesPage/New/D25047019_WLA_BAU_shop-by-category._SY375_QL85_.jpg" alt="headset">
+                    </div>
+                    <div class="access-content">
+                        <h4>headsets</h4>
+                    </div>
+                </div>
+                <div class="accessories">
+                    <div class="img">
+                        <img src="https://images-na.ssl-images-amazon.com/images/G/31/img21/Wireless/WLA/June/MobilesPage/New/D25047019_WLA_BAU_shop-by-category_3._SY375_QL85_.jpg" alt="cases & covers">
+                    </div>
+                    <div class="access-content">
+                        <h4>cases & cover</h4>
+                    </div>
+                </div>
+                <div class="accessories">
+                    <div class="img">
+                        <img src="https://images-na.ssl-images-amazon.com/images/G/31/img21/Wireless/WLA/June/MobilesPage/New/D25047019_WLA_BAU_shop-by-category_4._SY375_QL85_.jpg" alt="cable & chargers">
+                    </div>
+                    <div class="access-content">
+                        <h4>cable & chargers</h4>
+                    </div>
+                </div>
+                <div class="accessories">
+                    <div class="img">
+                        <img src="https://images-na.ssl-images-amazon.com/images/G/31/img21/Wireless/WLA/June/MobilesPage/New/D25047019_WLA_BAU_shop-by-category_5._SY250_QL85_.jpg" alt="screen protector">
+                    </div>
+                    <div class="access-content">
+                        <h4>screen protectors</h4>
+                    </div>
+                </div>
+                <div class="accessories">
+                    <div class="img">
+                        <img src="https://images-na.ssl-images-amazon.com/images/G/31/img21/Wireless/WLA/June/MobilesPage/New/D25047019_WLA_BAU_shop-by-category_7._SY312_QL85_.jpg" alt="shop now">
+                    </div>
+                    <div class="access-content">
+                        <h4>shop now</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =======bestseller section======= -->
+    <section class="bestseller-section">
+
+    </section>
 
     <!-- ======slide.js======== -->
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
